# rendezqueue-_-rendezllama

./: .gitignore  CMakeLists.txt  README.md
dep/cmake_fetchcontent/: fildesh.cmake  llama_cpp.cmake
doc/setting/: model.md  penalty.md  prompt.md  sample.md  sampling.md
example/prompt/: README.md
example/prompt/assistant_alpaca/: README.md  setting.sxpb
example/prompt/assistant_chatml/: README.md  setting.sxpb
example/prompt/assistant_coprocess/: setting.sxpb
example/prompt/assistant_gemma/: README.md  priming.txt  setting.sxpb
example/prompt/assistant_llama/: README.md  priming.txt  rolling.txt  setting.sxpb
example/prompt/assistant_mistral/: README.md  priming.txt  setting.sxpb
example/prompt/assistant_plain/: setting.sxpb
example/prompt/assistant_vicuna/: setting.sxpb
example/prompt/confidant_alpaca/: setting.sxpb
example/prompt/roshambo_kira/: setting.sxpb
src/: CMakeLists.txt
src/chat/: CMakeLists.txt  chat_main.cc  opt.cc  opt.hh  opt_schema.cc  trajectory.cc  trajectory.hh
src/language/: CMakeLists.txt  inference.cc  inference.hh  inference_schema.cc  inference_schema.hh  language_schema.cc  language_schema.hh  vocabulary.cc  vocabulary.hh
src/tokenize/: tokenize_main.cc
test/: CMakeLists.txt
test/chat/: CMakeLists.txt  guide_test.cc  opt_test.cc  trajectory_test.cc
test/example/prompt/: CMakeLists.txt
test/language/: CMakeLists.txt  inference_schema_test.cc  language_schema_test.cc  vocabulary_test.cc
test/manual/: chat.fildesh
